--- a/main.html
+++ b/main.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Enter Metaverse</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <p id="status">Enter the Metaverse</p>
-    <button id="enterBtn">Enter</button>
+    <h2>enter-metaverse</h2>
 
-    <script src="script.js"></script>
+    <p id="status" aria-live="polite">Enter the Metaverse</p>
+    <button id="enterBtn" aria-label="Enter the Metaverse button">Enter</button>
+
 </body>
 
 </html>
